--- a/index.html
+++ b/index.html
@@ -36,6 +36,23 @@ cd C:\Gemini-Garden && echo '<!DOCTYPE html>
             </div>
         </div>
         
+        <div class="personality-selector mt-5">
+            <label for="personality">Model Personality:</label>
+            <select id="personality" onChange="updatePersonality()">
+                <option value="default">Default</option>
+                <option value="creative">Creative & Imaginative</option>
+                <option value="analytical">Analytical & Precise</option>
+                <option value="friendly">Friendly & Supportive</option>
+                <option value="custom">Custom...</option>
+            </select>
+            
+            <div id="custom-personality" style="display:none;" class="mt-3">
+                <textarea id="custom-instructions" 
+                          placeholder="Add custom personality instructions here..."></textarea>
+                <button onclick="saveCustomPersonality()" class="btn btn-secondary mt-2">Save</button>
+            </div>
+        </div>
+
         <footer class="mt-5 pt-3 text-center border-top">
             <div class="container">
                 <div class="row">
@@ -48,5 +65,23 @@ cd C:\Gemini-Garden && echo '<!DOCTYPE html>
             </div>
         </footer>
     </div>
+
+    <script>
+    function updatePersonality() {
+        const personality = document.getElementById('personality').value;
+        const customDiv = document.getElementById('custom-personality');
+        if (personality === 'custom') {
+            customDiv.style.display = 'block';
+        } else {
+            customDiv.style.display = 'none';
+        }
+    }
+
+    function saveCustomPersonality() {
+        const customInstructions = document.getElementById('custom-instructions').value;
+        console.log('Custom personality saved:', customInstructions);
+        // Add logic to save custom instructions to the backend
+    }
+    </script>
 </body>
 </html>' > index.html
